--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
-personal_site/__pycache__/wsgi.cpython-312.pyc
-personal_site/__pycache__/__init__.cpython-312.pyc
-personal_site/__pycache__/settings.cpython-312.pyc
-personal_site/__pycache__/urls.cpython-312.pyc
+__pycache__/
+*.pyc
+
 db.sqlite3
-blog/__pycache__/__init__.cpython-312.pyc
+
+*/migrations/*.pyc
+django.code-workspace
